--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -5,18 +5,17 @@ services:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: mydatabase
-    ports:
-      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
-      - ./participants.csv:/docker-entrypoint-initdb.d/participants.csv
-      - ./tasks.csv:/docker-entrypoint-initdb.d/tasks.csv
+      - ./data/init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - "5432:5432"
 
   api:
     build: ./server
     depends_on:
       - db
+    command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
     environment:
       DATABASE_URL: postgresql://user:password@db:5432/mydatabase
     volumes:
