--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,7 @@ services:
       POSTGRES_DB: mydatabase
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./server/data/init.sql:/docker-entrypoint-initdb.d/init.sql
-      - ./server/data:/docker-entrypoint-initdb.d/data
+      - ./data:/data
     ports:
       - "5432:5432"
 
