--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
   db:
-    image: postgres:13
+    image: postgres:16
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydatabase
+      POSTGRES_DB: data
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - ./data:/data
+      - ./data:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
 
@@ -17,7 +17,7 @@ services:
       - db
     command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
     environment:
-      DATABASE_URL: postgresql://user:password@db:5432/mydatabase
+      DATABASE_URL: postgresql://user:password@db:5432/data
     volumes:
       - ./server:/app
     ports:
